--- a/chekov.css
+++ b/chekov.css
@@ -1,42 +1,52 @@
 .speech {
-    font-family: Arial, sans-serif;
+    font-family: cursive;
+    font-size: 16px;
+    color: rgb(123, 28, 28);
+  }
+  
+  .direction {
+    font-family: "Times New Roman", Times, serif;
     font-size: 14px;
-    color: black;
-.direction {
-    font-family: Times New Roman, serif;
-    font-size: 12px;
-    color: black;
-    background-color: #f1d4d4; 
-}
-.direction:hover {
-    background-color: #d4d4d4;
-    color: white;
-    .zinaida {
-        color: red;
-    }
-    
-    .marta {
-        color: brown;
-    }
-    
-    .first-guest {
-        color: red;
-    }
-    
-    .kosich {
-        color: green;
-    }
-    
-    .george {
-        color: yellow;
-    }
-    
-    .avdotia {
-        color: pink;
-    }
-    
-    .second-guest {
-        color: blue;
-    }
-}
-}
+    color: rgb(198, 39, 39);
+    background-color: lightgrey;
+  }
+  
+  .direction:hover {
+    color: rgb(126, 126, 71);
+    background-color: lightskyblue; 
+  }
+  
+  .zinaida {
+    color: blue;
+    font-size: 18px;
+  }
+  
+  .martha {
+    color: slateblue;
+    font-size: 18px;
+  }
+  
+  .first {
+    color: green;
+    font-size: 18px;
+  }
+  
+  .kosich {
+    color: red;
+    font-size: 18px;  
+  }
+  
+  .george {
+    color: orange;
+    font-size: 18px;
+  }
+  
+  .avdotia {
+    color: purple;
+    font-size: 18px;
+  }
+  
+  .second {
+    color: brown;
+    font-size: 18px;
+  }
